# SimpleNetworkClient

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
SimpleNetworkClientGUI/forms/: chatroomwindow.ui  mainwindow.ui  roommenuwindow.ui
SimpleNetworkClientGUI/include/: common.h  entities.h  standard_libs.h
SimpleNetworkClientGUI/include/windows/: chatroomwindow.h  mainwindow.h  roommenuwindow.h
SimpleNetworkClientGUI/source/: chatroomwindow.cpp  main.cpp  mainwindow.cpp  roommenuwindow.cpp
forms/: chatroomwindow.ui  mainwindow.ui  roommenuwindow.ui
include/: common.h  config_handler.h  entities.h  enum.h
include/entities/: message.h  room.h  soun_player.h
include/windows/: chatroomwindow.h  mainwindow.h  roommenuwindow.h
source/: chatroomwindow.cpp  mainwindow.cpp  roommenuwindow.cpp
src/: main.cpp
